--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "vite": "^7.0.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
@@ -29,7 +30,6 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "gh-pages": "^6.3.0",
-    "globals": "^16.3.0",
-    "vite": "^7.0.4"
+    "globals": "^16.3.0"
   }
 }
